--- a/SolveurGenetic/SolveurGenetic.csproj
+++ b/SolveurGenetic/SolveurGenetic.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DlxLib" Version="1.3.0" />
+    <PackageReference Include="GeneticSharp" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
