--- a/SolveurORTools/SolveurORTools.csproj
+++ b/SolveurORTools/SolveurORTools.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.OrTools" Version="7.4.7247" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Noyau\Noyau.csproj" />
+  </ItemGroup>
+
 </Project>
